--- a/index.html
+++ b/index.html
@@ -384,12 +384,21 @@
           <ul class="portfolio">
             <li class="list-portfolio">
               <div class="div-portfolio-img">
-                <img
-                  src="./images/img8.jpg"
-                  alt="Banking app"
-                  width="360"
-                  class="img-portfolio"
-                />
+                <picture>
+                  <source
+                    media="(max-width:767px)"
+                    srcset="./images/image.jpg, ./images/image2x.jpg 2x"
+          
+                  />
+                 <sourse media="(min-width:768px)" 
+                  srcset="./images/img.tbl.jpg, ./images/img.tbl2x.jpg 2x">
+                  <img
+                    src="./images/img8.jpg"
+                    alt="Banking app"
+                    width="360"
+                    class="img-portfolio"
+                  />
+                </picture>
                 <p class="text-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -404,12 +413,21 @@
 
             <li class="list-portfolio">
               <div class="div-portfolio-img">
-                <img
-                  src="./images/img9.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  class="img-portfolio"
-                />
+                <picture>
+                  <source
+                    media="(max-width:767px)"
+                    srcset="./images/image2.jpg, ./images/image2x2.jpg 2x"
+                  />
+                  <sourse media="(min-width:768px)" 
+                  srcset="./images/img.tbl2.jpg, ./images/img.tbl2x2.jpg 2x">
+                  <img
+                    src="./images/img9.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    class="img-portfolio"
+                  />
+                </picture>
+
                 <p class="text-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -423,12 +441,20 @@
             </li>
             <li class="list-portfolio">
               <div class="div-portfolio-img">
-                <img
-                  src="./images/img7.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  class="img-portfolio"
-                />
+                <picture>
+                  <source
+                    media="(max-width:767px)"
+                    srcset="./images/image3.jpg, ./images/image2x3.jpg 2x"
+                  />
+<sourse media="(min-width:768px)" 
+                  srcset="./images/img.tbl3.jpg, ./images/img.tbl2x3.jpg 2x">                  <img
+                    src="./images/img7.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    class="img-portfolio"
+                  />
+                </picture>
+
                 <p class="text-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -443,12 +469,21 @@
 
             <li class="list-portfolio">
               <div class="div-portfolio-img">
-                <img
-                  src="./images/img10.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  class="img-portfolio"
-                />
+                <picture>
+                  <source
+                    media="(max-width:767px)"
+                    srcset="./images/image4.jpg, ./images/image2x4.jpg 2x"
+                  />
+<sourse media="(min-width:768px)" 
+                  srcset="./images/img.tbl4.jpg, ./images/img.tbl2x4.jpg 2x">               
+                     <img
+                    src="./images/img10.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    class="img-portfolio"
+                  />
+                </picture>
+
                 <p class="text-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -462,12 +497,21 @@
             </li>
             <li class="list-portfolio">
               <div class="div-portfolio-img">
-                <img
-                  src="./images/img6.jpg"
-                  alt="Screen illustations"
-                  width="360"
-                  class="img-portfolio"
-                />
+                <picture>
+                  <source
+                    media="(max-width:767px)"
+                    srcset="./images/image5.jpg, ./images/image2x5.jpg 2x"
+                  />
+<sourse media="(min-width:768px)" 
+                  srcset="./images/img.tbl5.jpg, ./images/img.tbl2x5.jpg 2x">
+                  <img
+                    src="./images/img6.jpg"
+                    alt="Screen illustations"
+                    width="360"
+                    class="img-portfolio"
+                  />
+                </picture>
+
                 <p class="text-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -482,12 +526,21 @@
             </li>
             <li class="list-portfolio">
               <div class="div-portfolio-img">
-                <img
-                  src="./images/img5.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  class="img-portfolio"
-                />
+                <picture>
+                  <source
+                    media="(max-width:767px)"
+                    srcset="./images/image6.jpg, ./images/image2x6.jpg 2x"
+                  />
+                  <sourse media="(min-width:768px)" 
+                  srcset="./images/img.tbl6.jpg, ./images/img.tbl2x6.jpg 2x">
+                  <img
+                    src="./images/img5.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    class="img-portfolio"
+                    
+                  />
+                </picture>
                 <p class="text-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
