--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="li-address">
+              <li class="li-address two">
                 <a href="tel:+110001111111" class="menu-contact"
                   >+11 (000) 111-11-11</a
                 >
