--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
 
       <div class="mobile-menu is-open">
-        <div class="mobile-menu-container container">
+        <div class="mobile-menu-container ">
           <button type="button" class="modal-close-btn menu-close">
             <svg class="close-icon" width="8" height="8">
               <use href="./images/icons.svg#close-btn"></use>
@@ -76,7 +76,7 @@
               <li class="li-menu">
                 <a href="" class="menu-mbl"> Portfolio</a>
               </li>
-              <li class="li-menu"><a href="" class="menu-mbl"> Contacts</a></li>
+              <li class="li-menu last"><a href="" class="menu-mbl"> Contacts</a></li>
             </ul>
           </nav>
           <address class="address">
